--- a/index.html
+++ b/index.html
@@ -24,133 +24,154 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link" href="#Woman Jacket">Product</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="#">About us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                            <a class="nav-link" href="#Contact us" tabindex="-1" aria-disabled="true">Contact us</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
+        <div id="carouselExampleControls" class="carousel slide panda-slide" data-bs-ride="carousel">
+            <div class="carousel-inner bg-light">
                 <div class="carousel-item active">
-                    <div class="row">
+                    <div class="row align-items-center p-5">
                         <div class="col-md-6">
-                            <h1>BE THE PENGUINS OF WINTER</h1>
-                            <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, rem?</P>
+                            <h1><span id="be">BE THE PENGUINS</span> <br> OF WINTER</h1>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum, voluptatibus.</p>
+                            <button type="button" class="btn btn-success btn-lg"><i class="fas fa-shopping-cart"></i>Buy Now</button>
+                            
                         </div>
                         <div class="col-md-6">
-                            <img src="Image/mask.png" class="d-block w-55" alt="...">
+                            <img src="Image/mask.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
     </header>
-    <section>
-        <div class="woman-jacket">
-            <h1>Woman Jacket</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+    <section id="Woman Jacket" class="mt-5 ali">
+        <h1>Woman Jacket</h1>
+        <div class="w-jacket-card">
+            <div class="row row-cols-1 row-cols-md-3 g-5">
                 <div class="col">
-                    <div class="card h-50">
-                        <img src="Image/image 15.png" class="card-img-top" alt="...">
+                    <div class="card h-100 shadow border-0 rounded">
+                        <img src="Image/image 01.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content.</p>
+                            <h5 class="card-title">Woman Leather Jacket</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia,
+                                in?</p>
                         </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="card-footer card-footer-w">
+                            <div class="card-footer-woman d-flex justify-content-md-between">
+                                <h2>$134</h2>
+                                <button type="button" class="btn btn-success">BUY NOW</button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <img src="Image/SeekPng 1.png" class="card-img-top" alt="...">
+                    <div class="card h-100 shadow border-0 rounded">
+                        <img src="Image/image 02.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            <h5 class="card-title">Yellow Coat Jacket</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to
+                                additional
                                 content.</p>
                         </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="card-footer card-footer-w">
+                            <div class="card-footer-woman d-flex justify-content-md-between">
+                                <h2>$134</h2>
+                                <button type="button" class="btn btn-success">BUY NOW</button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <img src="Image/PngItem_2597366 1.png" class="card-img-top" alt="...">
+                    <div class="card h-100 shadow border-0 rounded">
+                        <img src="Image/image 03.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content.</p>
+                            <h5 class="card-title">Ladies Jacket</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+                                officia exercitationem reprehenderit.</p>
                         </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="card-footer card-footer-w">
+                            <div class="card-footer-woman d-flex justify-content-md-between">
+                                <h2>$134</h2>
+                                <button type="button" class="btn btn-success">BUY NOW</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </section>
-    <section>
+
+    <section id="Mans-jacket" class="mt-5">
         <div class="Mans-Jacket">
             <h1>Man Jacket</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-3 g-5">
                 <div class="col">
-                    <div class="card h-100">
-                        <img src="Image/image 11.png" class="card-img-top" alt="...">
+                    <div class="card h-100 shadow border-0 rounded">
+                        <img src="Image/image 04.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Snowboard Jacket Mens</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content.</p>
                         </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
+                        <div class="card-footer shadow border-0 rounded">
+                            <div class="card-footer-woman d-flex justify-content-md-between">
+                                <h2>$134</h2>
+                                <button type="button" class="btn btn-success">BUY NOW</button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <img src="Image/toppng 1.png" class="card-img-top" alt="...">
+                    <div class="card h-100  shadow border-0 rounded">
+                        <img src="Image/image 05.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Man Leather Jackets</h5>
                             <p class="card-text">This card has supporting text below as a natural lead-in to additional
                                 content.</p>
                         </div>
                         <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
+                            <div class="card-footer-woman d-flex justify-content-md-between">
+                                <h2>$134</h2>
+                                <button type="button" class="btn btn-success">BUY NOW</button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <img src="Image/vippng 1.png" class="card-img-top" alt="...">
+                    <div class="card h-100 shadow border-0 rounded">
+                        <img src="Image/image 06.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Man Casual Jackets</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content.</p>
                         </div>
                         <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
+                            <div class="card-footer-woman d-flex justify-content-md-between">
+                                <h2>134</h2>
+                                <button type="button" class="btn btn-success">BUY NOW</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="last mt-5">
+    <section id="Contact us" class="last mt-5">
         <div class="row">
             <div class="row">
                 <div class="col-md-5">
                     <div class="last-left">
                         <div class="card mb-3" style="max-width: 450px;">
-                            <div class="row g-0">
+                            <div class="row g-0  shadow border-0 rounded">
                                 <div class="col-md-4">
                                     <img style="width: 80%" src="Logo, Icon/image 12.png" alt="...">
                                 </div>
@@ -164,7 +185,7 @@
                             </div>
                         </div>
                         <div class="card mb-3" style="max-width: 450px;">
-                            <div class="row g-0">
+                            <div class="row g-0  shadow border-0 rounded">
                                 <div class="col-md-4">
                                     <img style="width: 80%;" src="Logo, Icon/image 13.png" alt="...">
                                 </div>
@@ -178,7 +199,7 @@
                             </div>
                         </div>
                         <div class="card mb-3" style="max-width: 450px;">
-                            <div class="row g-0">
+                            <div class="row g-0  shadow border-0 rounded">
                                 <div class="col-md-4">
                                     <img style="width: 80%;" src="Logo, Icon/image 14.png" alt="...">
                                 </div>
@@ -194,7 +215,7 @@
                     </div>
                 </div>
                 <div class="col-md-7">
-                    <img style="width: 90%;" src="Logo, Icon/XMLID 1.png" class="d-block w-55" alt="...">
+                    <img style="width: 100%;" src="Logo, Icon/XMLID 1.png" class="d-block w-55" alt="...">
                 </div>
             </div>
         </div>
